Indpendent LED visualization

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,7 @@
     <string-array name="ledText">
         <item>Off</item>
         <item>On</item>
-        <item>X</item>
+        <item>Hi-Z</item>
     </string-array>
 
     <!--Arduino model to uC-->
