--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,14 +1,17 @@
 <resources>
     <string name="app_name">ArduinoSimulator</string>
 
+    <string name="simulated_time_format">%d.%09d s</string>
+
     <string name="hex_file_read_fail">Fail to read program.</string>
     <string name="hex_file_read_fail_instructions">Load a .hex file and reset system</string>
 
     <string name="running">Running.</string>
     <string name="reset">Reset.</string>
+    <string name="short_circuit">SHORT CIRCUIT!!! - Reset system</string>
 
     <string name="outputSection_fragment">Output</string>
-    <string name="digitalInputSection_fragment">Digital Input</string>
+    <string name="inputSection_fragment">Input</string>
     
     <plurals name="number_selected">
         <item quantity="one">%d Selected</item>
