--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,8 @@
 <resources>
     <string name="app_name">ArduinoSimulator</string>
 
-    <string name="simulated_time_format">%d.%09d s</string>
+    <!--<string name="simulated_time_format">%d.%09d s</string>-->
+    <string name="simulated_time_format">%d.%06d s</string>
 
     <string name="hex_file_read_fail">Fail to read program.</string>
     <string name="hex_file_read_fail_instructions">Load a .hex file and reset system</string>
