--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">ArduinoSimulator</string>
 
     <string name="simulated_time_format">%d.%09d s</string>
-    <!--<string name="simulated_time_format">%d.%06d s</string>-->
+    <string name="memory_usage_format">Memory: %d %%</string>
 
     <string name="hex_file_read_fail">Fail to read program.</string>
     <string name="hex_file_read_fail_instructions">Load a .hex file and reset system</string>
@@ -78,4 +78,5 @@
     <string name="start_instructions">Tap \'+\' to start</string>
 
     <string name="developer">Developed by Kollins Gabriel Lima</string>
+    <string name="action_import">Import code</string>
 </resources>
