--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">ArduinoSimulator</string>
+    <string name="app_name">SOFIA</string>
 
     <string name="simulated_time_format">%d.%09d s</string>
     <string name="memory_usage_format">Mem: %d/%d</string>
