--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   ~ Copyright 2018
   ~ Kollins Lima (kollins.lima@gmail.com)
@@ -21,21 +22,21 @@
     <string name="simulated_time_format">%d.%09d s</string>
     <string name="memory_usage_format">Mem: %d/%d</string>
 
-    <string name="hex_file_read_fail">Fail to read program</string>
+    <string name="hex_file_read_fail">Falha ao ler programa.</string>
     <!--<string name="hex_file_read_fail_instructions">Load a .hex file and reset system</string>-->
-    <string name="hex_file_read_fail_instructions">Load a .hex file</string>
+    <string name="hex_file_read_fail_instructions">Carrege um arquivo .hex</string>
 
-    <string name="running">Running</string>
+    <string name="running">Executando</string>
     <string name="reset">Reset</string>
     <!--<string name="short_circuit">SHORT CIRCUIT!!! - Reset system</string>-->
-    <string name="short_circuit">SHORT CIRCUIT!</string>
+    <string name="short_circuit">CURTO CIRCUITO!</string>
 
-    <string name="outputSection_fragment">Output</string>
-    <string name="inputSection_fragment">Input</string>
-    
+    <string name="outputSection_fragment">Saída</string>
+    <string name="inputSection_fragment">Entrada</string>
+
     <plurals name="number_selected">
-        <item quantity="one">%d Selected</item>
-        <item quantity="other">%d Selected</item>
+        <item quantity="one">%d Selecionado</item>
+        <item quantity="other">%d Selecionados</item>
     </plurals>
 
     <string-array name="ledText">
@@ -90,12 +91,12 @@
     <string name="action_add">Add</string>
     <string name="action_delete">Delete</string>
 
-    <string name="action_output">Output</string>
-    <string name="action_anal_input">Analog Input</string>
-    <string name="action_input">Digital Input</string>
-    <string name="action_clear_io">Clear I/O</string>
-    <string name="start_instructions">Tap \'+\' to start</string>
+    <string name="action_output">Saída</string>
+    <string name="action_anal_input">Entrada Analógica</string>
+    <string name="action_input">Entrada Digital</string>
+    <string name="action_clear_io">Limpar E/S</string>
+    <string name="action_import">Importar código</string>
+    <string name="start_instructions">Pressione \'+\' para começar</string>
 
-    <string name="developer">Developed by Kollins Gabriel Lima</string>
-    <string name="action_import">Import code</string>
+    <string name="developer">Desenvolvido por Kollins Gabriel Lima</string>
 </resources>
