New Frequency Meter

--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -118,4 +118,5 @@
     <string name="action_memory_map">Memória</string>
 
     <string name="seach_mem_map">Buscar</string>
+    <string name="action_meter">Medidor</string>
 </resources>
