--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -116,5 +116,10 @@
     <string name="seach_mem_map">Search</string>
     <string name="action_meter">Meter</string>
     <string name="serial_monitor_title">Serial Monitor</string>
+    <string name="action_adc_adjust">AREF Config</string>
+    <string name="AREF_value">Type new AREF value (Volts)</string>
+    <string name="adc_cancel">Cancel</string>
+    <string name="AREF_current">Current AREF = </string>
+    <string name="arefError">Enter a positive value between 1 and 5</string>
 
 </resources>
