--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -128,4 +128,5 @@
 
     <string name="action_help">Ajuda</string>
     <string name="app_version">v1.4</string>
+    <string name="action_report_bug">Reportar Erro</string>
 </resources>
