--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -124,5 +124,6 @@
     <string name="developer_email">kollins.lima@gmail.com</string>
     <string name="action_help">Help</string>
     <string name="app_version">v1.4</string>
+    <string name="action_report_bug">Report a Bug</string>
 
 </resources>
