--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -129,4 +129,6 @@
     <string name="action_help">Ajuda</string>
     <string name="app_version">v1.7.1</string>
     <string name="action_report_bug">Reportar Erro</string>
+    <string name="action_memory_map_error">Inicie a simulação primeiro.</string>
+    <string name="filemanager_not_found">Instale um gerenciador de arquivos.</string>
 </resources>
