--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -125,5 +125,7 @@
     <string name="action_help">Help</string>
     <string name="app_version">v1.7.1</string>
     <string name="action_report_bug">Report a Bug</string>
+    <string name="action_memory_map_error">Please start simulation first.</string>
+    <string name="filemanager_not_found">Please install a File Manager.</string>
 
 </resources>
