--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -127,5 +127,7 @@
     <string name="action_report_bug">Report a Bug</string>
     <string name="action_memory_map_error">Please start simulation first.</string>
     <string name="filemanager_not_found">Please install a File Manager.</string>
+    <string name="not_hex_error">Error: Not a .hex file</string>
+    <string name="change_file_location_error">Error: Try moving your file somewhere else in the INTERNAL memory of your device</string>
 
 </resources>
