--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -133,4 +133,5 @@
     <string name="filemanager_not_found">Instale um gerenciador de arquivos.</string>
     <string name="not_hex_error">Erro: Este não é um arquivo .hex</string>
     <string name="change_file_location_error">Erro: Tente mover o arquivo para outro lugar na memória INTERNA do dispositivo</string>
+    <string name="fail_to_start_simulation">ERRO: Falha ao iniciar a simulação</string>
 </resources>
