--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -132,6 +132,6 @@
     <string name="action_memory_map_error">Inicie a simulação primeiro.</string>
     <string name="filemanager_not_found">Instale um gerenciador de arquivos.</string>
     <string name="not_hex_error">Erro: Este não é um arquivo .hex</string>
-    <string name="change_file_location_error">Erro: Tente mover o arquivo para outro lugar na memória INTERNA do dispositivo</string>
-    <string name="fail_to_start_simulation">ERRO: Falha ao iniciar a simulação</string>
+    <string name="fail_to_load_file">Erro: Falha ao carregar arquivo</string>
+    <string name="fail_to_start_simulation">Erro: Falha ao iniciar a simulação</string>
 </resources>
