--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,6 +26,7 @@
     <string name="hex_file_read_fail_instructions">Load a .hex file</string>
 
     <string name="running">Running</string>
+    <string name="paused">Paused</string>
     <string name="reset">Reset</string>
     <!--<string name="short_circuit">SHORT CIRCUIT!!! - Reset system</string>-->
     <string name="short_circuit">SHORT CIRCUIT!</string>
@@ -117,9 +118,9 @@
     <string name="action_meter">Meter</string>
     <string name="serial_monitor_title">Serial Monitor</string>
     <string name="action_adc_adjust">AREF Config</string>
-    <string name="AREF_value">Type new AREF value (Volts)</string>
+    <string name="AREF_value_hint">AREF (Volts)</string>
     <string name="adc_cancel">Cancel</string>
-    <string name="AREF_current">Current AREF = </string>
+    <string name="AREF_current">Current AREF (V)</string>
     <string name="arefError">Enter a positive value between 1 and 5</string>
     <string name="developer_email">kollins.lima@gmail.com</string>
     <string name="action_help">Help</string>
@@ -130,5 +131,11 @@
     <string name="not_hex_error">Error: Not a .hex file</string>
     <string name="fail_to_load_file">Error: Fail to load file</string>
     <string name="fail_to_start_simulation">Error: Fail to start simulation</string>
+    <string name="action_play_pause">Play/Pause</string>
+    <string name="action_settings">Settings</string>
+
+    <string name="settings_platform">Platform</string>
+    <string name="settings_default_platform">Arduino UNO</string>
+    <string name="settings_start_paused">Start paused</string>
 
 </resources>
